--- a/templates/components/CategoryCard.html.twig
+++ b/templates/components/CategoryCard.html.twig
@@ -2,7 +2,7 @@
   <a href="{{ href }}" class="bg-white relative rounded-lg shadow-md overflow-hidden transition-all hover:shadow-lg h-auto">
     <div class="h-32 bg-gray-200 relative">
       {% if imageUrl %}
-        <img src="/{{ imageUrl }}" alt="{{ name }}" class="w-full h-full object-cover" />
+        <img src="/images/{{ imageUrl }}" alt="{{ name }}" class="w-full h-full object-cover" />
       {% else %}
         <div class="w-full h-full flex items-center justify-center bg-gray-200">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
