--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -95,6 +95,7 @@
           <div class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
             <a href="{{ path('app_account') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mon compte</a>
             <a href="{{ path('app_account_addresses') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mes adresses</a>
+            <a href="{{ path('app_account_orders') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Mes commandes</a>
 
             {% if is_granted('ROLE_BAKER') %}
               <a href="{{ path('app_baker') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Ma boulangerie</a>
